--- a/src/john_controls/CMakeLists.txt
+++ b/src/john_controls/CMakeLists.txt
@@ -17,19 +17,88 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(Eigen3 REQUIRED)
+# find_package(john_interfaces REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(OpenCV REQUIRED)
+find_package(tf2 REQUIRED)
+
+include_directories(include ${catkin_INCLUDE_DIRS})
+
+add_executable(thrust_allocator 
+  src/thrust_allocator.cpp
+)
+target_include_directories(thrust_allocator PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+)
+
+install(TARGETS thrust_allocator
+  DESTINATION lib/${PROJECT_NAME}
+)
+add_library(john_controls SHARED
+  src/thrust_allocator.cpp
+)
+
+rclcpp_components_register_nodes(john_controls "john_controls::ThrustAllocator")
+
+target_compile_definitions(john_controls
+  PRIVATE "john_controls_CPP_BUILDING_DLL"
+)
+
+ament_target_dependencies(john_controls
+  "rclcpp"
+  "rclcpp_components"
+  "Eigen3"
+ # "john_interfaces"
+  "geometry_msgs"
+  "sensor_msgs"
+  "OpenCV"
+  "tf2"
+  "nav_msgs"
+)
+
+install(TARGETS
+  john_controls
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+)
+
+install(DIRECTORY
+  launch
+  config
+  DESTINATION share/${PROJECT_NAME}/
+)
+
+ 
+install(DIRECTORY
+  test/config
+  DESTINATION share/${PROJECT_NAME}/test
+)
+
+# Install Python modules
+# ament_python_install_package(${PROJECT_NAME})
+
+# Install Python executables
+#install(PROGRAMS
+#  john_controls/auv_transform_publisher.py
+#  john_controls/waypoint_marker_tester.py
+#  john_controls/predetermined_route.py
+#  john_controls/predetermined_thrust.py
+#  DESTINATION lib/${PROJECT_NAME}
+#)
 
 if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
+  find_package(launch_testing_ament_cmake REQUIRED)
+  add_launch_test(
+    test/test_thrust_allocator_launch.py
+  )
 endif()
 
 ament_package()
